# LinuxApplicationDevelopment2020

./: README.md
03_TerminalProject/: Makefile  README.md  main.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  main.c
06_Debugging/: main.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: Makefile  Readme.md
09_I18nL10n/: Makefile.am  Readme.md  configure.ac  guesser  main.c  messages.pot  ru.po
10_Documenting/: Doxyfile.in  Makefile.am  Readme.md  config.h  configure.ac  guesser.md.in  main.c  messages.pot  roman.c  roman.h  roman.md.in  ru.po
11_Toolkits/: Makefile.am  configure.ac  main.c  text.txt
12_ScriptingText/: configure.ac  guesser.md.in  main.c  messages.pot  roman.c  roman.h  ru.po
13_PatchInstall/: Makefile.am  Readme.md  configure.ac  main.c  messages.pot
